--- a/src/styles/mixins/typography.scss
+++ b/src/styles/mixins/typography.scss
@@ -168,3 +168,19 @@
   font-weight: $secondary-font-weight;
   line-height: 135%;
 }
+
+%button {
+  @include tablet {
+    font-size: rem(20);
+    line-height: rem(32);
+  }
+
+  @include mobile {
+    font-size: rem(18);
+    line-height: rem(28);
+  }
+
+  font-size: rem(22);
+  font-weight: $bold-font-weight;
+  line-height: rem(35);
+}
