--- a/src/components/TextIconSection/texticon-section.module.scss
+++ b/src/components/TextIconSection/texticon-section.module.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
   }
 
+  border: 2px solid green;
+
   justify-content: space-between;
 
   display: flex;
@@ -18,6 +20,7 @@
   .flexCol {
     flex: 1 1 66.6666%;
     display: flex;
+    border: 1px solid green;
 
     &:nth-child(2) {
       @include mobile {
