--- a/src/styles/mixins/_typography.scss
+++ b/src/styles/mixins/_typography.scss
@@ -3,7 +3,7 @@
 */
 
 @use "../utilities/settings.scss" as *;
-@use "../abstract/functions" as *;
+@use "../abstract/functions.scss" as *;
 @use "./media.scss" as *;
 
 %button-label {
