--- a/src/styles/utilities/_settings.scss
+++ b/src/styles/utilities/_settings.scss
@@ -7,7 +7,7 @@
 @use "sass:math";
 @use "sass:color";
 
-@use "../abstract/functions" as *;
+@use "../abstract/functions.scss" as *;
 
 /*
 * Fonts and Typography
