--- a/src/components/global/Header/header.module.scss
+++ b/src/components/global/Header/header.module.scss
@@ -1,51 +1,35 @@
 @use "@/styles/helpers.scss" as *;
 
 
-.wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.header {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  align-items: center;
+  justify-content: space-between;
+
+  display: flex;
+
+  width: 100%;
+  padding: $padding-xsm $margin-contained;
+
+  transition: background-color 0.3s ease-in-out;
+
+  background-color: transparent;
+
+  color: var(--main-color);
+
+  &.scrolled-past-breakpoint {
+    z-index: $header-nav-z-index;
+    background-color: var(--bg-color);
   }
-  
-  .logo {
-    img {
-      max-width: 150px;
-      height: auto;
-    }
-  }
-  
-  .nav {
-    ul {
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-  
-    .navItem {
-      margin: 0 1rem;
-      position: relative;
-  
-      &:hover .subMenu {
-        display: block;
-      }
-    }
-  
-    .subMenu {
-      display: none;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: #ffffff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      padding: 0.5rem;
-      min-width: 150px;
-  
-      .subMenuItem {
-        margin: 0.5rem 0;
-      }
-    }
-  }
+}
+
+.logoLink {
+  height: $grid-10;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+}
