--- a/src/components/blocks/Hero/hero.module.scss
+++ b/src/components/blocks/Hero/hero.module.scss
@@ -1,8 +1,70 @@
 @use "@/styles/helpers" as *;
 
-.headline {
-    @extend %h1;
-    color: $brand-secondary;
-    margin-bottom: 1rem;
-    text-align: center;
+.hero {
+  @include desktop {
+    min-height: rem(700);
+  }
+
+  @include tablet {
+    min-height: rem(600);
+  }
+
+  @include mobile {
+    min-height: min(rem(500), 100vh);
+  }
+
+  position: relative;
+  z-index: 1;
+  flex-direction: column;
+  align-items: flex-start;
+
+  display: flex;
+
+  overflow: hidden;
+
+  width: 100%;
+  min-height: rem(800);
+  padding: calc($padding-lg + $grid-10 + rem(72)) $margin-contained $padding-md;
+
+  .backgroundImage {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+  }
+
+  .videoBackground {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+  }
+
+  .defaultBackground {
+    background-color: $black-100;
+  }
+
+  .button {
+    @extend %button-label;
+
+    margin-top: auto;
+    font-size: rem(20);
+  }
+}
+
+.headline h1 {
+  @extend %button-label;
+  @extend %h1-hero;
+
+  color: $white-100;
 }
