--- a/src/components/global/Header/components/BurgerButton/burger-button.module.scss
+++ b/src/components/global/Header/components/BurgerButton/burger-button.module.scss
@@ -32,7 +32,7 @@
   transition: 0.4s;
 
   // background-color: var(--main-color);
-  background-color: black;
+  background-color: white;
 
 
   &:nth-child(1) {
