--- a/src/styles/utilities/_settings.scss
+++ b/src/styles/utilities/_settings.scss
@@ -32,7 +32,7 @@ $bold-font-weight: 700;
 */
 // Base Colors
 $light: #fff;
-$dark: #000;
+$dark: #0d0d0d;
 $medium-light: #f2f2f2;
 $medium: #ddd;
 $medium-dark: #aaa;
