--- a/src/components/global/Header/header.module.scss
+++ b/src/components/global/Header/header.module.scss
@@ -33,3 +33,11 @@
   width: 100%;
   height: 100%;
 }
+
+.mobileMenuOpen {
+  background-color: #000; 
+}
+
+.scrolledPastHero {
+  background-color: white; 
+}
