--- a/src/components/global/Header/components/HeaderNavigation/header-navigation.module.scss
+++ b/src/components/global/Header/components/HeaderNavigation/header-navigation.module.scss
@@ -8,7 +8,7 @@
     opacity: 0;
     transform: scaleX(0);
 
-    border-bottom: solid 1px black; //var(--main-color)
+    border-bottom: solid 1px white; //var(--main-color)
 
     transition:
       transform 0.3s ease-out,
