--- a/src/styles/utilities/_settings.scss
+++ b/src/styles/utilities/_settings.scss
@@ -129,6 +129,9 @@ $black-100: #131313;
 $lime-600: #cdf00f;
 $lime-500: #e0ff38;
 $lime-700: #b7d60e;
+$turquoise-100: #60e2e8;
+$code-green-100: #bdff6f;
+$code-pink-100: #fe67c0;
 $external-linkedin: #0a66c2;
 
 /*
