--- a/src/components/global/Header/header.module.scss
+++ b/src/components/global/Header/header.module.scss
@@ -18,11 +18,6 @@
   background-color: transparent;
 
   color: var(--main-color);
-
-  &.scrolled-past-breakpoint {
-    z-index: $header-nav-z-index;
-    background-color: var(--bg-color);
-  }
 }
 
 .logoLink {
@@ -34,10 +29,23 @@
   height: 100%;
 }
 
-.mobileMenuOpen {
-  background-color: #000; 
-}
+
 
 .scrolledPastHero {
-  background-color: white; 
+  z-index: $header-nav-z-index;
+  background-color: $black-100; 
+  @include desktop {
+    a {
+      color: black;
+    }
+  }  
+  @include tablet {
+    a {
+      color: white;
+    }
+  } 
+}
+
+.mobileMenuOpen {
+  background-color: #000; 
 }
