fix hero no video

--- a/src/components/blocks/Grid/grid.module.scss
+++ b/src/components/blocks/Grid/grid.module.scss
@@ -27,7 +27,7 @@
   .gridContainer {
     margin-top: 3rem; // Equivalent to 'mt-12'
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); // Auto grid columns with a minimum width
+    grid-template-columns: repeat(3, 1fr); 
     gap: 2rem; // Equivalent to 'gap-8'
   }
 
