--- a/src/styles/utilities/_settings.scss
+++ b/src/styles/utilities/_settings.scss
@@ -37,6 +37,7 @@ $medium-light: #f2f2f2;
 $medium: #ddd;
 $medium-dark: #aaa;
 $dark-medium: #5f5f5e;
+$light-light: #f3f3f3;
 
 // Brand Colors
 $brand-primary: #e0ff38;
