--- a/src/components/blocks/Grid/grid.module.scss
+++ b/src/components/blocks/Grid/grid.module.scss
@@ -36,7 +36,7 @@
 
   .buttonGrid {
     color: black!important;
-    text-decoration: underline!important;
+    text-decoration: underline;
     @include mobile {
       max-width: 70%;
     }
