--- a/src/components/blocks/Hero/hero.module.scss
+++ b/src/components/blocks/Hero/hero.module.scss
@@ -24,7 +24,7 @@
 
   width: 100%;
   min-height: rem(800);
-  padding: calc($padding-lg + $grid-10 + rem(72)) $margin-contained $padding-md;
+  padding: calc($padding-xlg + $grid-10 + rem(72)) $margin-contained $padding-md;
 
   .backgroundImage {
     position: absolute;
