footer logo and spacing

--- a/src/components/blocks/CallToAction/call-to-action.module.scss
+++ b/src/components/blocks/CallToAction/call-to-action.module.scss
@@ -11,7 +11,7 @@
 
   height: rem(600);
   position: relative;
-  margin-bottom: calc(var(--padding-xlg) - var(--padding-sm));
+  // margin-bottom: calc(var(--padding-xlg) - var(--padding-sm));
 }
 
 .image {
