footer logo and spacing again

--- a/src/components/blocks/CallToAction/call-to-action.module.scss
+++ b/src/components/blocks/CallToAction/call-to-action.module.scss
@@ -57,6 +57,9 @@
 }
 
 .CTAButton {
+  @include mobile{
+    max-width: 70%;
+  }
   background-color: $turquoise-100;
   color: $dark!important;
   border-color: $dark!important;
