--- a/src/components/blocks/TextIcon/texticon.module.scss
+++ b/src/components/blocks/TextIcon/texticon.module.scss
@@ -8,7 +8,7 @@
 
   flex-direction: column;
   display: flex;
-  padding: var(--padding-xlg) var(--margin-contained) calc(var(--padding-xlg) - var(--padding-sm)) var(--margin-contained);
+  padding: var(--padding-xlg) var(--margin-contained) 0 var(--margin-contained);
 }
 
 .texticonWrapper {
