button padding mobile

--- a/src/components/blocks/Button/button.module.scss
+++ b/src/components/blocks/Button/button.module.scss
@@ -40,6 +40,8 @@
 
 .bordered {
   @include mobile {
+    padding-right: $padding-sm;
+    padding-left: $padding-sm;
     justify-content: center;
     width: 100%;
   }
