--- a/src/components/blocks/Service/service.module.scss
+++ b/src/components/blocks/Service/service.module.scss
@@ -30,3 +30,8 @@
     font-size: 1rem; // Default font size for the description
     line-height: 1.5rem;
 }
+
+.hero {
+    height: 200px;
+    background-color: $dark;
+}
